# path_tracer

./: Cargo.toml  LICENSE  README.md
path_tracer/: Cargo.toml
path_tracer/src/: camera.rs  colour.rs  debugon.rs  dialectic.rs  hit.rs  image.rs  lambertian.rs  lib.rs  main.rs  material.rs  metal.rs  ray.rs  scene.rs  sphere.rs  vec3.rs
path_tracer_ffi/: Cargo.toml
path_tracer_ffi/ffi/c/include/: PT.h
path_tracer_ffi/src/: lib.rs
path_tracer_ffi/tests/: integration_tests.rs
src/: camera.rs  colour.rs  hit.rs  image.rs  lib.rs  main.rs  ray.rs  scene.rs  vec3.rs
