[workspace]
members = [ "path_tracer", "path_tracer_ffi" ]

[package]
name = "path_tracer"
version = "0.1.0"
authors = ["jumbatm <30644300+jumbatm@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "^0.7", features = [ "small_rng" ] }
