[package]
name = "path_tracer_ffi"
version = "0.1.0"
authors = ["jumbatm <30644300+jumbatm@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path_tracer = { path = "../path_tracer" }
